Fix notes text appearing center-aligned in details toggle

--- a/note-types/mvj/css.css
+++ b/note-types/mvj/css.css
@@ -1907,6 +1907,7 @@ html:not(.tategaki) .front-content .image-wrap {
 .details-inner .notes-section {
     margin: 0;
     order: unset;
+    align-self: stretch;
 }
 
 .details-inner .def {
